# amiga-lzx

./: .gitignore  ALGORITHM.md  CONSTANTS.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/amiga-lzx/: Cargo.toml
crates/amiga-lzx-cli/: Cargo.toml
crates/amiga-lzx-cli/src/: main.rs
crates/amiga-lzx/src/: block.rs  constants.rs  crc32.rs  decoder.rs  error.rs  lib.rs  lz77.rs  matcher.rs
crates/amiga-lzx/src/archive/: attrs.rs  datetime.rs  mod.rs  reader.rs  writer.rs
crates/amiga-lzx/src/bitio/: mod.rs  reader.rs  writer.rs
crates/amiga-lzx/src/huffman/: build.rs  decode.rs  pretree.rs
crates/amiga-lzx/tests/: archive_roundtrip.rs  file_attributes.rs  issue_5_dates.rs  sembiance_samples.rs
crates/lzx/: Cargo.toml
crates/lzx-cli/: Cargo.toml
crates/lzx-cli/src/: main.rs
crates/lzx/src/: block.rs  crc32.rs  decoder.rs  error.rs  hash.rs  lib.rs  lz77.rs  matcher.rs
crates/lzx/src/archive/: attrs.rs  datetime.rs  reader.rs  writer.rs
crates/lzx/src/bitio/: reader.rs
crates/lzx/src/huffman/: build.rs  decode.rs  mod.rs  pretree.rs
crates/lzx/tests/: archive_roundtrip.rs  sembiance_samples.rs
