[workspace]
resolver = "2"
members = ["crates/amiga-lzx", "crates/amiga-lzx-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "WTFPL"
authors = ["Gareth Davidson <gaz@bitplane.net>"]
repository = "https://github.com/bitplane/lzx"

[workspace.dependencies]
thiserror = "1"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
proptest = "1"
tempfile = "3"
