[package]
name = "amiga-lzx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pure-Rust compressor and decompressor for the Amiga LZX archive format"
readme = "README.md"
keywords = ["amiga", "lzx", "compression", "archive", "lz77"]
categories = ["compression"]

[dependencies]
thiserror.workspace = true
bitflags.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
