[package]
name = "lzx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for the lzx (Amiga) crate"

[[bin]]
name = "lzx"
path = "src/main.rs"

[dependencies]
lzx = { path = "../lzx" }
clap.workspace = true
