[package]
name = "lzx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-Rust LZX (Amiga) compressor and decompressor"

[dependencies]
thiserror.workspace = true
bitflags.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
